--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,9 +9,9 @@
         <div class="nav-list">
           <div class="li" routerLinkActive="nav-active"><a routerLink="/index" >首页</a></div>
           <div class="li" routerLinkActive="nav-active"><a routerLink="/news" >新闻</a></div>
+          <div class="li" routerLinkActive="nav-active"><a routerLink="/repair">校园设施报修</a></div>
           <div class="li" routerLinkActive="nav-active"><a href="javascript:void(0)">失物招领</a></div>
           <div class="li" routerLinkActive="nav-active"><a href="javascript:void(0)">校友拼车</a></div>
-          <div class="li" routerLinkActive="nav-active"><a href="javascript:void(0)">校园设施报修</a></div>
           <div class="li" routerLinkActive="nav-active"><a routerLink="/table" href="javascript:void(0)">功能4</a></div>
         </div>
       </div>
@@ -35,7 +35,7 @@
 
   <router-outlet>
   </router-outlet>
-  <button (click)="createComponentFactory('hhe')">动态创建组件 测试</button>
+  <button (click)="createComponentFactory('login to admin')">动态创建组件 测试</button>
   <button (click)="destroyComponent()">destroy</button>
   <footer #alertContainer>
     Youth 校内网
