--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,12 @@
 
 <div class="container-fluid">
+  <div class="row" [@signal]="signal">
+    <div class="col-12 ">
+<button (click)="toGreen()">green</button>
+      <button (click)="toRed()">Red</button>
+    </div>
+
+  </div>
 
   <div class="row">
     <div class="col-12  slider">
