--- a/src/app/share/popup/popup.component.html
+++ b/src/app/share/popup/popup.component.html
@@ -1,6 +1,11 @@
 <div class="shadow">
  <div class="popup-wrapper">
-   <button (click)="closePopup()">close</button>
-   popup is work,,{{type}}
+
+   动态创建弹窗组件测试{{type}}
+   <br>
+   <!--<button (click)="closePopup()">x</button>-->
+10秒后自动关闭弹窗
+   <br>
+   <a href="http://cuit.crazyming.cn/admin" target="_blank">点击此处访问后台管理系统</a>
  </div>
 </div>
